Remove 'text area popup editor' option in new/edit form

--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -24,11 +24,7 @@
               = label
             %input.target_flag{"data-target" => "#{column_name}_target_flag", :type => "checkbox"}/
 
-            - if column.options[:popup_editor].present?
-              - if column.options[:popup_editor] == "TextArea"
-                = form.text_area column_name, {:readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 239px; height: 4em;'}.deep_merge(input_html)
-
-            - elsif column.sql_type.to_s == 'belongs_to'
+            - if column.sql_type.to_s == 'belongs_to'
               = form.select column_name,                            |
                 select_options(column),                             |
                 { include_blank: !column.presence_required? },      |
