fix js for jsquery > 1.9, fix some css

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -38,6 +38,8 @@ h1 {
   }
   .pager {
     height: 27px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
   // .grid-header, .grid, .pager
   //   border-right: 1px solid #A5A5A5
