some work about the master detail

--- a/app/assets/stylesheets/toolbar.css.scss
+++ b/app/assets/stylesheets/toolbar.css.scss
@@ -161,6 +161,10 @@ $toolbar_button_height: 50px;
   min-width: 75px;
 }
 
+.detail_add_action {
+  min-width: 75px;
+}
+
 .configure_icon_s {
   background: image-url("ui/configure_icon_s.png") no-repeat top center;
 }
