--- a/app/assets/stylesheets/jquery_ui_overrides.css.scss
+++ b/app/assets/stylesheets/jquery_ui_overrides.css.scss
@@ -1,5 +1,17 @@
 @import "base";
 
+.ui-button {
+  background-color: rgba(0, 0, 0, 0) !important;
+  .ui-button-text {
+    display: none !important;
+  }
+  .ui-icon-closethick {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
+
 .ui-dialog .ui-dialog-buttonpane button, .ui-button .ui-button-text {
   line-height: 0.6em;
 }
@@ -24,6 +36,7 @@
 }
 
 .ui-dialog {
+  z-index: 1;
   overflow: visible;
   .ui-dialog-content {
     overflow: visible;
