FEATURE #37679 - upgrade slick grid: Fixed header row sizing (88745c5fa1a64387a174a3fc9ed90cebeda565dd)

--- a/app/assets/stylesheets/SlickGrid/slick.grid.css
+++ b/app/assets/stylesheets/SlickGrid/slick.grid.css
@@ -86,7 +86,7 @@ classes should alter those!
 }
 
 .slick-cell, .slick-headerrow-column {
-  float: left;
+  position: absolute;
 
   border: 1px solid transparent;
   border-right: 1px dotted silver;
