FEATURE #37679 - upgrade slick grid: SlickGrid v2.1 - Implement virtual rendering for columns. (e4f25cbb63722475618f019b92d26aa935a0e1ad)

--- a/app/assets/stylesheets/jquery_ui_overrides.css.scss
+++ b/app/assets/stylesheets/jquery_ui_overrides.css.scss
@@ -1,6 +1,6 @@
 @import "base";
 
-.ui-button {
+.ui-widget-header .ui-button {
   background-color: rgba(0, 0, 0, 0) !important;
   .ui-button-text {
     display: none !important;
