--- a/app/assets/stylesheets/menu.css.scss
+++ b/app/assets/stylesheets/menu.css.scss
@@ -1,6 +1,6 @@
 @import "base";
 
-$menu_width: 199px;
+$menu_width: 200px;
 
 #navigation {
   position: absolute;
@@ -57,11 +57,11 @@ $menu_width: 199px;
   #menu {
     position: absolute;
     overflow-y: auto;
-    // :top 42px
     right: 0;
     left: 10px;
     bottom: 32px;
-    // :bottom 190px
+    font-size: 12px;
+    line-height: 20px;
     ul {
       margin-top: 2px;
       margin-bottom: $margin;
@@ -164,7 +164,7 @@ $menu_width: 199px;
           margin-left: 6px;
           //:text-transform uppercase
           //:font-weight bold
-       
+
         }
         .loading_bar {
           margin-top: 0px;
@@ -172,7 +172,7 @@ $menu_width: 199px;
           background: image-url("ui/load_indicator_bar_small.gif") no-repeat;
           // :margin-left      auto
           // :margin-right     auto
-       
+
         }
         .loading_stats {
           font-size: 9px;
