--- a/app/views/home.html.haml
+++ b/app/views/home.html.haml
@@ -4,9 +4,49 @@
     - begin
       = render :template => 'homepage/dashboard'
     - rescue
-  #confirm_dialog.ui-state-highlight{:style => "display: none;", :title => t('wulin_master.title.confirmation', default: 'Confirmation')}
-    %h4
-      %span.ui-icon.ui-icon-alert{:style => "float: left; margin-right: .2em;"}
-      #confirm_content= t('wulin_master.alert.confirm', default: 'Are you sure to do this ?')
+  #general_modal.modal.fade{role: 'dialog', tabindex: '-1'}
+    .modal-dialog
+      .modal-content
+        .modal-header
+          %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
+            %span{"aria-hidden" => "true"} &times;
+          %h4#myModalLabel.modal-title Notice
+        .modal-body
+        .modal-footer
+          %input.btn.btn-default.cancel{type: 'button', value: 'Cancel', "data-dismiss" => "modal"}
+          %input.btn.btn-default.yes{type: 'button', value: 'Yes'}
 
+  #confirm_modal.modal.fade{role: 'dialog', tabindex: '-1', title: t('wulin_master.title.confirmation', default: 'Confirmation')}
+    .modal-dialog{role: 'document'}
+      .modal-content
+        .modal-header
+          %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
+            %span{"aria-hidden" => "true"} &times;
+          %h4#myModalLabel.modal-title Confirmation
+        .modal-body
+          %span.ui-icon.ui-icon-alert{:style => "float: left; margin-right: .2em;"}
+          #confirm_content= t('wulin_master.alert.confirm', default: 'Are you sure to do this ?')
+        .modal-footer
+          .submit
+            %input.btn.btn-default.cancel{type: 'button', value: 'Cancel', "data-dismiss" => "modal"}/
+            %input.btn.btn-default.yes{type: 'button', value: 'Yes'}/
 
+  #error_modal.modal.fade{role: 'dialog', tabindex: '-1'}
+    .modal-dialog{role: 'document'}
+      .modal-content
+        .modal-header
+          %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
+            %span{"aria-hidden" => "true"} &times;
+          %h4#myModalLabel.modal-title Error
+        .modal-body
+          An unexpected error occured.
+        .modal-footer
+          .submit
+            %input.btn.btn-default{type: 'button', value: 'OK', "data-dismiss" => "modal"}/
+
+  / sync customers modal
+  #sync_modal.modal.fade{role: 'dialog', tabindex: '-1'}
+    .modal-dialog{role: 'document'}
+      .modal-content
+        .modal-body
+          Synchronizing...
