MISC - 1. refactor open model methods; 2. bootstrap modal replacement(WIP)

--- a/app/assets/stylesheets/grid_form.css.scss
+++ b/app/assets/stylesheets/grid_form.css.scss
@@ -6,8 +6,8 @@
   form {
     padding: 20px 0;
     .field {
-      min-height: 50px;
       padding: 5px 0;
+      clear: both;
       label {
         width: 120px;
         margin-right: 5px;
