--- a/app/assets/stylesheets/chosen_overrides.css.scss
+++ b/app/assets/stylesheets/chosen_overrides.css.scss
@@ -23,6 +23,7 @@
 }
 
 select.form-control + .chzn-container.chzn-container-single .chzn-single {
+    position: initial;
     display: block;
     width: 100%;
     height: 34px;
@@ -60,7 +61,7 @@ select.form-control + .chzn-container .chzn-drop {
 
 select.form-control + .chzn-container .chzn-search input[type=text] {
     display: block;
-    width: 100%;
+    width: 100%!important;
     height: 34px;
     padding: 6px 12px;
     font-size: 14px;
