BUG - fix images missing on production

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -92,3 +92,10 @@ form {
     color: red;
   }
 }
+
+.tick {
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  background: image-url('tick.png') no-repeat center center;
+}
