BUG #60223 - Fix reload feature
- Add menuable.rb using concerns for controller
- Inculde Menuable for home_controller & screen_controller
- Use self.inherited(subclass) to get menu info for subclasseds of home_controller & screen_controller
- Use xhr? to decide loading content in index template
- Create content partial to use both in index and home template

--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -1,4 +1,8 @@
-- components.each do |component|
-  = render :partial => '/grid', :locals => {:grid => component} if component.is_grid?
-  = render :partial => '/panel', :locals => {:panel => component} if component.is_panel?
-  - break if component.respond_to?(:fill_window?) and component.fill_window?
+- if xhr
+  - components.each do |component|
+    = render :partial => '/grid', :locals => {:grid => component} if component.is_grid?
+    = render :partial => '/panel', :locals => {:panel => component} if component.is_panel?
+    - break if component.respond_to?(:fill_window?) and component.fill_window?
+- else
+  = render '/menu'
+  = render '/content'
