--- a/app/views/home.html.haml
+++ b/app/views/home.html.haml
@@ -1,12 +1,2 @@
-= render "/menu"
-#content
-  #screen_content
-    - begin
-      = render :template => 'homepage/dashboard'
-    - rescue
-  #confirm_dialog.ui-state-highlight{:style => "display: none;", :title => "Confirmation"}
-    %h4
-      %span.ui-icon.ui-icon-alert{:style => "float: left; margin-right: .2em;"}
-      #confirm_content="Are you sure to do this ?"
-
-
+= render '/menu'
+= render '/content'
