--- a/app/views/option_new_form.html.haml
+++ b/app/views/option_new_form.html.haml
@@ -1,4 +1,4 @@
-- if grid.action_names.include?('add') || grid.action_names.include?('hotkey_add') 
+- if grid.action_names.include?('add') || grid.action_names.include?('hotkey_add')
   :ruby
     model_name = grid.model.model_name.singular
     columns = grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
@@ -55,7 +55,7 @@
                     var depend_select_id = "#{model_name}_#{column.options[:depend_column]}";
                     var depend_select = $("select#" + depend_select_id);
 
-                    depend_select.live('change', function(){
+                    depend_select.on('change', function(){
                       var current_select_id = "#{model_name}_#{column_name}";
                       var current_select = $("select#" + current_select_id);
                       var key = $(this).val();
@@ -64,7 +64,7 @@
                       current_select.find("option[data-key=" + key + "]").show().trigger("liszt:updated");
                     });
                   });
-                  
+
             - elsif column.options[:file]
               = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
             - elsif column.options[:password]
