MISC #60750 Upgrade CrewList
- Remove position: absolute (css) for .toolbar-wrapper

--- a/app/assets/stylesheets/toolbar.scss
+++ b/app/assets/stylesheets/toolbar.scss
@@ -5,7 +5,7 @@ $toolbar_button_height: 50px;
 
 .grid-header {
   .toolbar-wrapper {
-    position: absolute;
+    // position: absolute;
     top: 0;
     right: 20px;
     padding-top: 5px;
