BUG - Delete float style to show header name in center

--- a/app/assets/stylesheets/SlickGrid/slick.headerbuttons.css
+++ b/app/assets/stylesheets/SlickGrid/slick.headerbuttons.css
@@ -5,7 +5,7 @@
    * display way below the lower boundary of the column thus hiding them.
    */
   display: inline-block;
-  float: left;
+  /*float: left;*/ /* Ekohe Delete: Show title in cneter */
   margin-bottom: 100px;
 }
 
